Split photo/print storage: client-side photos per world, server-side prints bound to items
- PhotoStorage: photos always client-local at gameDir/birdwatch/photos/<worldKey>
  (singleplayer save name / multiplayer server ip), photos isolated per player
- New PrintStore (server): prints at <save>/birdwatch/prints/<printId>.png+json;
  save/read/delete with id validation; periodic GC (10min) removes unreferenced
  files older than 24h (covers natural item despawn which lacks onDestroyed)
- ModNetworking: PrintRequest carries scaled PNG bytes (client crops+scales 512px);
  new S2C PrintImagePayload (push on handbook paste + on-demand fetch) and C2S
  PrintImageRequestPayload; HandbookUnlock now uses printId, deletes consumed
  print file, old photo returned as item (ref transfer, file kept)
- PhotoPrintItem.onDestroyed: burning/explosion deletes bound print file
- Client renderer/handbook read print cache, request server on miss
- PhotoIndex skips print_cache/印刷; handbook.json moved into world photos root
  (legacy fallback read)

Co-Authored-By: Claude <noreply@anthropic.com>